# fvm_advection_sphere

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
mesh_data/: atlas_O32.dat.bz2
src/fvm_advection_sphere/: advection.py  advection_np.py  build_config.py  common.py  metric.py  output.py  state.py  state_container.py
src/fvm_advection_sphere/mesh/: atlas_mesh.py  regular_mesh.py
src/fvm_advection_sphere/utils/: atlas_mesh.py  cartesian_mesh.py  fvm_mesh.py  nb_field.py  plotter.py  regular_mesh.py  vis.py
tests/: advection.py  advection_Plotter.py  nabla.py  plotting_offline.py
