[metadata]
name = fvm-advection-sphere
version = 0.0.1
author = Till Ehrengruber
author_email = till.ehrengruber@cscs.ch
description = A toy advection solver on the sphere
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tehrengruber/fvm-advection-sphere
project_urls =
    Bug Tracker = https://github.com/tehrengruber/fvm-advection-sphere/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
  matplotlib >= 3.5
  numpy >= 1.21
  #pyvista >= 0.34.0
  pyvista@git+https://github.com/pyvista/pyvista.git
  meshio >= 5.3.0
  atlas4py@git+https://github.com/GridTools/atlas4py.git
  gt4py-functional@git+https://github.com/tehrengruber/gt4py.git@reduce_foast_lowering_complexity

[options.packages.find]
where = src